--- a/Seren.fyi-Landing-Page/package.json
+++ b/Seren.fyi-Landing-Page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seren.fyi-landing",
+  "name": "seren.fyi-landing-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,7 +19,8 @@
     "next": "13.4.6",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
