--- a/Seren.fyi-Landing-Page/package.json
+++ b/Seren.fyi-Landing-Page/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
